<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:background="@color/lightGrey"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_marginTop="32dp"
            android:id="@+id/card_view"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">
    <LinearLayout
        android:padding="@dimen/vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/vertical"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_liv_track"
        android:id="@+id/btn_liv_track"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:focusable="true" />

    <Button
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical"
        android:textAlignment="center"
        android:text="@string/btn_geofence"
        android:id="@+id/btn_geofence"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:focusable="true" />

    <Button
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/vertical"
        android:textAlignment="center"
        android:text="@string/btn_history"
        android:id="@+id/btn_history"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:focusable="true" />

    <Button
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/vertical"
        android:textAlignment="center"
        android:text="@string/btn_caregivers"
        android:id="@+id/btn_caregivers"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/vertical"
        android:textAlignment="center"
        android:text="@string/btn_user_details"
        android:id="@+id/btn_user_details"
        android:layout_marginBottom="@dimen/vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:focusable="true" />

    </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>