<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignUpActivity"
    android:padding="@dimen/vertical"
    android:background="@color/lightGrey"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_gravity="center_horizontal"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp">
    <LinearLayout
        android:padding="@dimen/vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/vertical_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_sign_up_email">
        <EditText
            android:id="@+id/et_sign_up_email"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/vertical_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_sign_up_password">
        <EditText
            android:id="@+id/et_sign_up_password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/vertical_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_sign_up_re_password">
        <EditText
            android:id="@+id/et_sign_up_re_password"
            android:hint="@string/re_password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="@dimen/vertical"
        android:background="@color/colorPrimary"
        android:id="@+id/btn_sign_up"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_sign_up"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>