<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HistoryActivity"
    android:padding="@dimen/vertical"
    android:background="@color/lightGrey"
    tools:showIn="@layout/activity_history">

    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_gravity="center_horizontal"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/layout_history"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:focusable="true"
        android:id="@+id/layout_date"
        android:padding="@dimen/vertical_half"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_weight="1"
        android:id="@+id/tv_date"
        android:gravity="center_horizontal"
        android:hint="@string/history_date_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/btn_date"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/history_btn_date"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <fragment
        android:layout_marginTop="@dimen/vertical"
        android:id="@+id/historyMap"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        style="@style/Margins"
        android:layout_marginTop="@dimen/vertical"
        android:id="@+id/tv_marker_address"
        android:layout_gravity="center_horizontal"
        android:hint="@string/marker_address_label"
        android:layout_width="match_parent"
        android:minLines="4"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:orientation="vertical"
        android:id="@+id/layout_history_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Margins"
            android:layout_marginTop="@dimen/vertical"
            android:id="@+id/tv_live_track_error"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textAlignment="center"
            android:hint="@string/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>