<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserDetailsActivity"
    android:padding="@dimen/vertical"
    android:background="@color/lightGrey"
    tools:showIn="@layout/activity_user_details">


    <ScrollView
        android:scrollbarThumbVertical="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_gravity="center_horizontal"
            android:id="@+id/card_view"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">
        <LinearLayout
            android:padding="@dimen/vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/vertical_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_user_name">
                <EditText

                    android:id="@+id/et_user_name"
                    android:hint="@string/name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/vertical_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_user_phone">
            <EditText
                android:id="@+id/et_user_phone"
                android:inputType="phone"
                android:hint="@string/phone_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/vertical_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_user_address">

                <EditText
                    android:id="@+id/et_user_address"
                    android:maxLines="3"
                    android:minLines="3"
                    android:hint="@string/address_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/vertical_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_user_bloodgroup">
                <EditText
                    android:id="@+id/et_user_bloodgroup"
                    android:inputType="textCapSentences"
                    android:hint="@string/bloodgroup_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>